[project]
name = "quid"
version = "1.0"
authors = ["Johnny Quid"]
edition = "2023"
license = "MIT"

[dependencies]
fuels = { version = "0.40.0", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
