[package]
name = "QD"
description = "mirror.xyz/quid.eth"
version = "0.1.0"
edition = "2021"
authors = ["John Quid <john@quid.io>"]
license = "BSL-1.1"

[dev-dependencies]
fuels = { version = "0.53", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"